home-prod/photoprism/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: photoprism-gateway
  namespace: photoprism
spec:
  selector:
    istio: ingressgateway
  servers:
  #- port:
  #    number: 443
  #    name: https
  #    protocol: HTTPS
  #  tls:
  #    mode: SIMPLE
  #    credentialName: acme-stg-secret # must be the same as secret
  #  hosts:
  #  - "photos.thingsgreener.com"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "photos.thingsgreener.com"
  #  tls:
  #    httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: photoprism-vs
  namespace: photoprism
spec:
  hosts:
  - "photos.thingsgreener.com"
  gateways:
  - photoprism-gateway
  http:
  #- match:
  #  - uri:
  #      prefix: /
  - route:
    - destination:
        host: photoprism-service
        port:
          number: 80
---
